# MTGArenaCompanion

./: .gitignore  Pipfile  README.md  main.py  pyproject.toml  requirements.txt  setup.py
MTGArenaCompanion/: __init__.py
MTGArenaCompanion/GUI/: __init__.py
MTGArenaCompanion/GUI/menus/: __init__.py
MTGArenaCompanion/GUI/windows/: __init__.py  add_new_deck.py  choose_deck.py  first_run_win.py  logging_win.py  start.py  theme_win.py  timer.py  track_game.py
MTGArenaCompanion/GUI/windows/popups/: __init__.py
MTGArenaCompanion/duel_track/: timers.py
MTGArenaCompanion/lib/: __init__.py  arg_parse.py
MTGArenaCompanion/lib/decks/: __init__.py
MTGArenaCompanion/lib/errors/: __init__.py
repo_media/readme_archive/: v1.md
