[tool.poetry]
name = "MTGArena-Companion"
version = "1.0"
description = "MTGArena Companion is an application that will help you keep track of your statistics for MTGArena online!"
authors = ["Taylor-Jayde Blackstone <tayjaybabee@gmail.com>"]
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.7"
PySimpleGUIQt = "^0.35.0"
inspyre-toolbox = "1.0-alpha2"
inspy-logger = "2.0a3"
insPyred-print = "^1.0"

[tool.poetry.dev-dependencies]
Sphinx = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
